--- a/public/css/root.css
+++ b/public/css/root.css
@@ -29,19 +29,19 @@ body {
 }
 
 *:not(*[data-theme]) {
-	--background: #D04343;
+	--background: #303030;
 
 	/* Text */
 	--text-font: 'Montserrat', sans-serif;
 	--text-color: white;
 	
 	/* Widgets */
-	--widget-background: #B82B2B;
-	--widget-border: #9C0909;
+	--widget-background: #58b82b;
+	--widget-border: #1a9c09;
 
 	/* Pinned */
-	--pinned-background: #B82B2B;
-	--pinned-widget-color: hsl(0deg 62% 45%);
+	--pinned-background: #37b82b;
+	--pinned-widget-color: hsl(125, 62%, 45%);
 }
 
 *[data-theme="hub"] {
